<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:background="@drawable/android_login"
    android:gravity="center_horizontal"
    >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dip"
        android:background="@drawable/android_titles" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/androidStore"
            android:layout_marginBottom="22dp"
            android:textColor="#ffff"
            android:textSize="35dip"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewNamer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20dip" />

        <EditText
            android:id="@+id/editTextNamer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLength="3" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textViewPwdr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:text="@string/pwd"
            android:textSize="20dip" />

        <EditText
            android:id="@+id/editTextPwdr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="11" />

        <TextView
            android:id="@+id/textViewPwdrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:text="@string/confirmPwd"
            android:textSize="20dip" />

        <EditText
            android:id="@+id/editTextPwdrs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="11" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/yregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register" />

            <Button
                android:id="@+id/nregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
