<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_login"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dip"
        android:background="@drawable/android_titles" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="22dp"
            android:text="@string/androidStore"
            android:textColor="#ffff"
            android:textSize="35dip"
            android:textStyle="bold" />

    </RelativeLayout>

    

    <LinearLayout
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:orientation="vertical" >

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/androidStore"
            android:textColor="#38ADD4"
            android:textSize="20dip" />
    </LinearLayout>
        
        <TextView
            android:id="@+id/textViewName"
            android:layout_marginTop="20dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20dip" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#38ADD4" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textViewPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:text="@string/pwd"
            android:textSize="20dip" />

        <EditText
            android:id="@+id/editTextPwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="#38ADD4"
            android:maxLength="5"
             />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
         >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tisRegister"
            android:textSize="20dip"
            android:textColor="#777"
             />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#38ADD4"
            android:textSize="20dip" />
    </LinearLayout>

</LinearLayout>